[package]
name = "sitemap_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
hyper-tls = "0.5.0"
futures = "0.3.19"
anyhow = "1.0.53"
quick-xml = "0.22.0"
scraper = "0.12.0"
url-normalizer = "0.2.0"
url = "2.2.2"
async-recursion = "1.0.0"
