[package]
name = "sitemap_generator"
description = "Generate the sitemap for your site fast and easily"
version = "0.1.0"
authors = ["fren_gor <goro@frengor.com>"]
readme = "README.md"
repository = "https://github.com/frengor/SitemapGenerator"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1.5", features = ["derive"] }
hyper-tls = "0.5.0"
futures = "0.3.19"
anyhow = "1.0.55"
quick-xml = "0.22.0"
scraper = "0.12.0"
url-normalizer = "0.2.0"
url = "2.2.2"
async-recursion = "1.0.0"
