[package]
name = "sitemap_generator"
description = "Generate the sitemap for your site fast and easily"
version = "0.1.0"
authors = ["fren_gor <goro@frengor.com>"]
readme = "README.md"
repository = "https://github.com/frengor/SitemapGenerator"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["gzip", "brotli", "deflate"] }
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1.10", features = ["derive"] }
futures = "0.3.21"
anyhow = "1.0.56"
quick-xml = "0.22.0"
scraper = "0.12.0"
url-normalizer = "0.2.0"
url = "2.2.2"
num_cpus = "1.13.1"
lazy_static = "1.4.0"
faccess = "0.2.4"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench"
harness = false
